crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__model_names__model_names_reference_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/model_names.rs
expression: code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, toHandlerKey as _toHandlerKey } from 'vue';

export function render(_ctx) {
  const _component_Child = _resolveComponent("Child")
  const n0 = _createComponentWithFallback(_component_Child, { $: [
    () => ({ [(_ctx.name)]: _ctx.value }),
    () => ({ [(_toHandlerKey("update:" + (_ctx.name)))]: $event => ((_ctx.value) = $event) })
  ] }, null, true)
  return n0
}
